[package]
name = "netmuxd"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "netmuxd"

[[bin]]
name = "test"
path = "src/test.rs"

[[bin]]
name = "passthrough"
path = "src/passthrough.rs"

[dependencies]
tokio = { version = "1.17.0", features = [ "full" ] }
futures-util = { version = "0.3.21" }

zeroconf = { git = "https://github.com/cxfksword/zeroconf-rs.git", branch = "master", optional = true }
mdns = { git = "https://github.com/cxfksword/mdns.git", branch = "master" }

rusty_libimobiledevice = { version = "0.1.2", git = "https://github.com/cxfksword/rusty_libimobiledevice.git", branch = "master", features = [ "static", "vendored" ] }
plist_plus = { version = "0.2.*", git = "https://github.com/cxfksword/plist_plus.git", branch = "master", features = [ "static", "vendored" ] }

log = { version = "0.4.16" }
env_logger = { version = "0.7.1" }
colored = { version = "2.0.0" }

rusb = { version = "0.9.1", optional = true }
libusb1-sys = { version = "0.6.2", optional = true }

[features]
usb = [ "libusb1-sys", "rusb" ]
